# DAT

dat-lab/: stack.yaml
dat-lab/drawing/: drawing.cabal
dat-lab/drawing/data/: draw.js  index.html  widgets.js
dat-lab/drawing/src/Drawing/Internal/: Handler.hs  Types.hs
dat-lab/monads/: MyTool.hs
dat-lab/prac-forums/: forums.db  prac-forums.cabal
dat-lab/prac-forums/haskell/: Main.hs  Routing.hs
dat-lab/prac-forums/haskell/Forums/: App.hs  Config.hs  Found.hs  Handler.hs  Model.hs  View.hs
dat-lab/prac-forums/templates/: forum.html  home.html  login.html  topic.html
dat-lab/prac-intro-web/: Handler.hs  Handler_T1.hs  Handler_T2.hs  hello-2.hs  joc.hs  prac-intro-web.cabal
dat-lab/prac-intro-web/monads/: ConfigReader.hs  Reader.hs  ReaderT.hs  test_reader_1.hs  test_reader_2.hs  test_reader_3.hs
dat-lab/prac-prog-fun/: exemple.hs  exercici3.hs  exercici4.hs  exercici5.hs  exercici6.hs  inici.hs  prac-prog-fun.cabal
dat-lab/prac-prog-fun/part2/: life.hs
dat-lab/prac-prog-fun/part2/Life/: Draw.hs
