cabal-version: 1.12

name:           prac-forums
version:        0.0.0.1
author:         Jordi Forga Alberich
build-type:     Simple

executable forums-app
  main-is: Main.hs
  other-modules:
      Forums.App
      Forums.Config
      Forums.Found
      Forums.Handler
      Forums.Model
      Forums.View
      Paths_prac_forums
      Db
      Routing
  hs-source-dirs:
      haskell
  build-depends:
    aeson
    , base >=4.9 && <5
    , blaze-markup
    , bytestring
    , cmark
    , containers
    , cryptonite
    , datfw
    , directory
    , http-types
    , mtl
    , sqlite-simple
    , template-haskell
    , text
    , time
    , transformers
    , wai >=3.0
    , warp
  default-language: Haskell2010

