cabal-version: 1.12

name:           prac-intro-web
version:        0.0.0.1
author:         Jordi Forga Alberich
build-type:     Simple

library
  build-depends:
    base >=4.7 && <5
    , blaze-html
    , bytestring
    , containers
    , cookie
    , http-types
    , text
    , wai >=3.0
    , warp
  default-language: Haskell2010
